--- a/BabelNet2OWL/config/babelnet.var.properties
+++ b/BabelNet2OWL/config/babelnet.var.properties
@@ -12,8 +12,12 @@
 #
 # example:
 #
-babelnet.key=32fa7aa4-e92c-44b2-b4fa-c6aa37e09b16
-
+#fpanos3
+#babelnet.key=32fa7aa4-e92c-44b2-b4fa-c6aa37e09b16
+#fpanos4
+babelnet.key=a660a318-77ad-4480-b686-f3d79bfed634
+#fpanos5
+#babelnet.key=77099068-fb4d-489f-861c-db03f777f815
 # BabelNet RESTFul service url
 #
 babelnet.restfulurl=http://babelnet.io/v5/service
